--- a/demo/distributed/CMakeLists.txt
+++ b/demo/distributed/CMakeLists.txt
@@ -18,18 +18,11 @@ project(distributed)
 
 find_package(BioDynaMo REQUIRED)
 include("${BDM_USE_FILE}")
-include_directories("/home/bdm/ray/src")
-include_directories("/home/bdm/ray/src/common")
-include_directories("/home/bdm/ray/src/common/thirdparty")
-include_directories("/home/bdm/ray/src/ray/gcs/format")
-include_directories("/home/bdm/ray/thirdparty/pkg/arrow/cpp/build/cpp-install/include")
-include_directories("/home/bdm/ray/thirdparty/pkg/boost/include")
-include_directories("/home/bdm/ray/thirdparty/pkg/flatbuffers/include")
-link_directories("/home/bdm/ray/build/src/local_scheduler")
-link_directories("/home/bdm/ray/build/src/common")
-link_directories("/home/bdm/ray/build/src/ray")
-link_directories("/home/bdm/ray/thirdparty/pkg/boost/lib")
-link_directories("/home/bdm/ray/thirdparty/pkg/arrow/cpp/build/cpp-install/lib")
+include_directories("$ENV{BDM_INSTALL_DIR}/third_party/ray/include")
+include_directories("$ENV{BDM_INSTALL_DIR}/third_party/ray/include/common")
+include_directories("$ENV{BDM_INSTALL_DIR}/third_party/ray/include/common/thirdparty")
+include_directories("$ENV{BDM_INSTALL_DIR}/third_party/ray/include/ray/gcs/format")
+link_directories("$ENV{BDM_INSTALL_DIR}/third_party/ray/lib")
 include_directories("src")
 
 file(GLOB_RECURSE HEADERS src/*.h)
@@ -38,4 +31,10 @@ file(GLOB_RECURSE SOURCES src/*.cc)
 bdm_add_executable(distributed
                    HEADERS "${HEADERS}"
                    SOURCES "${SOURCES}"
-                   LIBRARIES "${BDM_REQUIRED_LIBRARIES}" "-lboost_system" "-lray" "-lplasma" "-larrow" "-llocal_scheduler_client" "-lcommon")
+                   LIBRARIES "${BDM_REQUIRED_LIBRARIES}"
+                             "-lboost_system"
+                             "-larrow"
+                             "-lplasma"
+                             "-llocal_scheduler_client"
+                             "-lcommon"
+                             "-lray")
