Add bdm_add_ray_library CMake command.
This essentially reverts 3b6186769c5959a1f5b86a15b17affb3a8e5bb71.

--- a/demo/distributed/CMakeLists.txt
+++ b/demo/distributed/CMakeLists.txt
@@ -28,13 +28,13 @@ include_directories("src")
 file(GLOB_RECURSE HEADERS src/*.h)
 file(GLOB_RECURSE SOURCES src/*.cc)
 
-bdm_add_executable(distributed
-                   HEADERS "${HEADERS}"
-                   SOURCES "${SOURCES}"
-                   LIBRARIES "${BDM_REQUIRED_LIBRARIES}"
-                             "-lboost_system"
-                             "-larrow"
-                             "-lplasma"
-                             "-llocal_scheduler_client"
-                             "-lcommon"
-                             "-lray")
+bdm_add_ray_library(distributed-ray
+                    HEADERS "${HEADERS}"
+                    SOURCES "${SOURCES}"
+                    LIBRARIES "${BDM_REQUIRED_LIBRARIES}"
+                              "-lboost_system"
+                              "-larrow"
+                              "-lplasma"
+                              "-llocal_scheduler_client"
+                              "-lcommon"
+                              "-lray")
