--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ matrix:
       dist: trusty
       sudo: required
       group: edge
+      language: python
       python:
           - "2.7.12"
           - "3.5.2"
